--- a/docs/articles/joss/paper.bib
+++ b/docs/articles/joss/paper.bib
@@ -1,4 +1,3 @@
-% Encoding: UTF-8
 
 @Article{masson2000,
   author   = {Masson, Valéry},
@@ -13,7 +12,7 @@
   issn     = {0006-8314, 1573-1472},
   doi      = {10.1023/A:1002463829265},
   url      = {http://link.springer.com/10.1023/A:1002463829265},
-  urldate  = {2020-03-17},
+  urldate  = {2020-03-17}
 }
 
 @Article{stewart2012,
@@ -29,7 +28,7 @@
   issn     = {0003-0007, 1520-0477},
   doi      = {10.1175/BAMS-D-11-00019.1},
   url      = {http://journals.ametsoc.org/doi/abs/10.1175/BAMS-D-11-00019.1},
-  urldate  = {2020-03-17},
+  urldate  = {2020-03-17}
 }
 
 @Article{bocher2018,
@@ -44,7 +43,7 @@
   issn       = {22120955},
   doi        = {10.1016/j.uclim.2018.01.008},
   url        = {https://linkinghub.elsevier.com/retrieve/pii/S2212095518300117},
-  urldate    = {2020-03-23},
+  urldate    = {2020-03-23}
 }
 
 @Article{masson2020,
@@ -59,7 +58,7 @@
   issn       = {22120955},
   doi        = {10.1016/j.uclim.2019.100536},
   url        = {https://linkinghub.elsevier.com/retrieve/pii/S2212095518303663},
-  urldate    = {2020-12-10},
+  urldate    = {2020-12-10}
 }
 
 @Article{bernard2017,
@@ -74,7 +73,7 @@
   issn       = {03601323},
   doi        = {10.1016/j.buildenv.2017.08.009},
   url        = {https://linkinghub.elsevier.com/retrieve/pii/S0360132317303554},
-  urldate    = {2020-03-16},
+  urldate    = {2020-03-16}
 }
 
 @Article{demuzere2021,
@@ -89,7 +88,7 @@
   issn       = {2296-665X},
   doi        = {10.3389/fenvs.2021.637455},
   url        = {https://www.frontiersin.org/articles/10.3389/fenvs.2021.637455/full},
-  urldate    = {2021-06-11},
+  urldate    = {2021-06-11}
 }
 
 @Article{lindberg2018,
@@ -104,7 +103,7 @@
   issn       = {13648152},
   doi        = {10.1016/j.envsoft.2017.09.020},
   url        = {https://linkinghub.elsevier.com/retrieve/pii/S1364815217304140},
-  urldate    = {2021-06-29},
+  urldate    = {2021-06-29}
 }
 
 @Article{bernabe2015,
@@ -119,7 +118,7 @@
   issn     = {22120955},
   doi      = {10.1016/j.uclim.2015.04.001},
   url      = {https://linkinghub.elsevier.com/retrieve/pii/S2212095515000115},
-  urldate  = {2020-03-09},
+  urldate  = {2020-03-09}
 }
 
 @Article{lindberg2007,
@@ -135,7 +134,7 @@
   issn       = {13504827},
   doi        = {10.1002/met.29},
   url        = {http://doi.wiley.com/10.1002/met.29},
-  urldate    = {2021-06-29},
+  urldate    = {2021-06-29}
 }
 
 @Article{johansson2016,
@@ -147,7 +146,7 @@
   volume   = {124},
   pages    = {189--203},
   issn     = {13504827},
-  doi      = {10.1007/s00704-015-1405-2},
+  doi      = {10.1007/s00704-015-1405-2}
 }
 
 @Book{hanna2002,
@@ -155,7 +154,5 @@
   title  = {Wind Flow and Vapor Cloud Dispersion at Industrial and Urban Sites},
   year   = {2002},
   editor = {American Institute of Chemical Engineers},
-  isbn   = {978-0-816-90863-9},
-}
-
-@Comment{jabref-meta: databaseType:biblatex;}
+  isbn   = {978-0-816-90863-9}
+  }
