Update .bib with UMEP Manual ref
Update .bib with UMEP Manual ref

--- a/docs/articles/joss/paper.bib
+++ b/docs/articles/joss/paper.bib
@@ -106,6 +106,14 @@
   urldate    = {2021-06-29}
 }
 
+@manual{lindberg2019,
+  title         = {Urban Multi-scale Environmental Predictor (UMEP) Manual}, 
+  author        = {Lindberg, Fredrik and Grimmond,  C.S.B and Gabey, Andrew and Jarvi, Leena and Kent, Christophe W. and Krave, Niklas and Sun, Ting and Wallenberg, Nils and Ward, Helen C.},
+  organization  = {University of Reading UK, University of Gothenburg Sweden, SIMS China},
+  year          = 2019,
+  url           = {https://umep-docs.readthedocs.io/}
+}
+
 @Article{bernabe2015,
   author   = {Bernabé, Anne and Bernard, Jérémy and Musy, Marjorie and Andrieu, Hervé and Bocher, Erwan and Calmet, Isabelle and Kéravec, Pascal and Rosant, Jean-Michel},
   title    = {Radiative and heat storage properties of the urban fabric derived from analysis of surface forms},
