--- a/docs/articles/joss/paper.bib
+++ b/docs/articles/joss/paper.bib
@@ -131,7 +131,7 @@
 
 @Article{lindberg2007,
   author     = {Lindberg, Fredrik},
-  title      = {Modelling the urban climate using a local governmental geo-database: {MODELLING} {THE} {URBAN} {CLIMATE} {USING} {A} {GEO}-{DATABASE}},
+  title      = {Modelling the urban climate using a local governmental geo-database},
   journal    = {Meteorological Applications},
   year       = {2007},
   language   = {en},
